--- a/Registro.html
+++ b/Registro.html
@@ -1,4 +1,4 @@
-<template>
+<p>Regístrate como nuevo usuario en nuestra web aquí</p>
    <div class=" container bg-light text-center" >
       <div class=" dropdown-dividerrow ">
         <form class=" dropdown-dividercol-md-3 px-14 py-3">
@@ -21,15 +21,6 @@
           </div>
         </form>
         <div class="dropdown-divider "></div>
-        <router-link :to="{name: 'resetpassword'}">
-        <a class="dropdown-item" href="#">Olvidaste tu contraseña?</a>
-        </router-link>
+        <a class="dropdown-item" href="#">Recupera tu contraseña aquí</a>
         </div>  
   </div>
-</template>
-
-<script>
-export default {
-    name: 'login'
-}
-</script>
